testsuite/tests/rename/should_fail/Or3.stderr

Or3.hs:6:4: error: [GHC-81303]
    An or-pattern may not bind term or type variables such as ‘a’ or ‘b’

Or3.hs:9:8: error: [GHC-81303]
    An or-pattern may not bind term or type variables such as ‘x’

Or3.hs:12:4: error: [GHC-81303]
    An or-pattern may not bind term or type variables such as ‘y’
